# PixelSort

./: .gitignore  PixelSort.cabal  README.md  pixelSort.hs  stack.yaml
app/: Main.hs
