name:                PixelSort
version:             0.1.0.0
license:             MIT
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable PixelSort
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gd
  default-language:    Haskell2010
